@@ -4,7 +4,7 @@
 
 # TARGTYPE "Win32 (x86) External Target" 0x0106
 
-CFG=make_explorer - Win32 Debug
+CFG=make_explorer - Win32 Unicode Debug
 !MESSAGE This is not a valid makefile. To build this project using NMAKE,
 !MESSAGE use the Export Makefile command and run
 !MESSAGE 
@@ -13,12 +13,14 @@ CFG=make_explorer - Win32 Debug
 !MESSAGE You can specify a configuration when running NMAKE
 !MESSAGE by defining the macro CFG on the command line. For example:
 !MESSAGE 
-!MESSAGE NMAKE /f "make_explorer.mak" CFG="make_explorer - Win32 Debug"
+!MESSAGE NMAKE /f "make_explorer.mak" CFG="make_explorer - Win32 Unicode Debug"
 !MESSAGE 
 !MESSAGE Possible choices for configuration are:
 !MESSAGE 
 !MESSAGE "make_explorer - Win32 Release" (based on "Win32 (x86) External Target")
 !MESSAGE "make_explorer - Win32 Debug" (based on "Win32 (x86) External Target")
+!MESSAGE "make_explorer - Win32 Unicode Debug" (based on "Win32 (x86) External Target")
+!MESSAGE "make_explorer - Win32 Unicode Release" (based on "Win32 (x86) External Target")
 !MESSAGE 
 
 # Begin Project
@@ -41,7 +43,7 @@ CFG=make_explorer - Win32 Debug
 # PROP Use_Debug_Libraries 0
 # PROP Output_Dir "Release"
 # PROP Intermediate_Dir "Release"
-# PROP Cmd_Line "msdevfilt -gcc -pipe "perl d:\tools\gSTLFilt.pl" make -f Makefile.MinGW UNICODE=1"
+# PROP Cmd_Line "msdevfilt -gcc -pipe "perl d:\tools\gSTLFilt.pl" make -f Makefile.MinGW"
 # PROP Rebuild_Opt "clean all"
 # PROP Target_File "explorer.exe"
 # PROP Bsc_Name ""
@@ -62,7 +64,49 @@ CFG=make_explorer - Win32 Debug
 # PROP Use_Debug_Libraries 1
 # PROP Output_Dir "Debug"
 # PROP Intermediate_Dir "Debug"
+# PROP Cmd_Line "msdevfilt -gcc -pipe "perl d:\tools\gSTLFilt.pl" make -f Makefile.MinGW DEBUG=1"
+# PROP Rebuild_Opt "clean all"
+# PROP Target_File "explorer.exe"
+# PROP Bsc_Name ""
+# PROP Target_Dir ""
+
+!ELSEIF  "$(CFG)" == "make_explorer - Win32 Unicode Debug"
+
+# PROP BASE Use_MFC 0
+# PROP BASE Use_Debug_Libraries 1
+# PROP BASE Output_Dir "UDebug"
+# PROP BASE Intermediate_Dir "UDebug"
+# PROP BASE Cmd_Line "msdevfilt -gcc -pipe "perl d:\tools\gSTLFilt.pl" make -f Makefile.MinGW UNICODE=1 DEBUG=1"
+# PROP BASE Rebuild_Opt "clean all"
+# PROP BASE Target_File "explorer.exe"
+# PROP BASE Bsc_Name ""
+# PROP BASE Target_Dir ""
+# PROP Use_MFC 0
+# PROP Use_Debug_Libraries 1
+# PROP Output_Dir "UDebug"
+# PROP Intermediate_Dir "UDebug"
 # PROP Cmd_Line "msdevfilt -gcc -pipe "perl d:\tools\gSTLFilt.pl" make -f Makefile.MinGW UNICODE=1 DEBUG=1"
+# PROP Rebuild_Opt "clean all"
+# PROP Target_File "explorer.exe"
+# PROP Bsc_Name ""
+# PROP Target_Dir ""
+
+!ELSEIF  "$(CFG)" == "make_explorer - Win32 Unicode Release"
+
+# PROP BASE Use_MFC 0
+# PROP BASE Use_Debug_Libraries 0
+# PROP BASE Output_Dir "URelease"
+# PROP BASE Intermediate_Dir "URelease"
+# PROP BASE Cmd_Line "msdevfilt -gcc -pipe "perl d:\tools\gSTLFilt.pl" make -f Makefile.MinGW UNICODE=1"
+# PROP BASE Rebuild_Opt "clean all"
+# PROP BASE Target_File "explorer.exe"
+# PROP BASE Bsc_Name ""
+# PROP BASE Target_Dir ""
+# PROP Use_MFC 0
+# PROP Use_Debug_Libraries 0
+# PROP Output_Dir "URelease"
+# PROP Intermediate_Dir "URelease"
+# PROP Cmd_Line "msdevfilt -gcc -pipe "perl d:\tools\gSTLFilt.pl" make -f Makefile.MinGW UNICODE=1"
 # PROP Rebuild_Opt "clean all"
 # PROP Target_File "explorer.exe"
 # PROP Bsc_Name ""
@@ -74,10 +118,16 @@ CFG=make_explorer - Win32 Debug
 
 # Name "make_explorer - Win32 Release"
 # Name "make_explorer - Win32 Debug"
+# Name "make_explorer - Win32 Unicode Debug"
+# Name "make_explorer - Win32 Unicode Release"
 
 !IF  "$(CFG)" == "make_explorer - Win32 Release"
 
 !ELSEIF  "$(CFG)" == "make_explorer - Win32 Debug"
+
+!ELSEIF  "$(CFG)" == "make_explorer - Win32 Unicode Debug"
+
+!ELSEIF  "$(CFG)" == "make_explorer - Win32 Unicode Release"
 
 !ENDIF 
 
